fix "our Menu" alignment

--- a/css/styles.css
+++ b/css/styles.css
@@ -91,8 +91,5 @@ body {
    padding: 5px; 
 }
 
-#main-content h1 {
-    margin-top: 0%;
-}
 
 
